deploy/web-skp-ingress-kust/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-skp
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: web-skp
